scripts/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: signalrchat
  labels:
    app: signalrchat
    group: testing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: signalrchat
  template:
    metadata:
      labels:
        app: signalrchat
        group: testing
    spec:
      containers:
        - name: signalrchat
          image: mikiacr.azurecr.io/signalrchat:latest
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 128Mi
          ports:
            - name: web
              containerPort: 8080
            - name: websocket
              containerPort: 5000
