scripts/clusterip-service.yml
kind: Service
apiVersion: v1
metadata:
  name:  clusterip-signalrchat
spec:
  selector:
    app:  signalrchat
  sessionAffinity: ClientIP
  type: ClusterIP
  ports:
  - name:  web
    port:  80
    targetPort:  80
  - name:  websocket
    port:  5000
    targetPort: 5000
