scripts/ingress_original.yml
# For more information, see:
# https://pumpingco.de/blog/using-signalr-in-kubernetes-behind-nginx-ingress/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: signalrchat
  namespace: default
  annotations:
      nginx.ingress.kubernetes.io/affinity: cookie
      nginx.ingress.kubernetes.io/affinity-mode: persistent
      nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
      nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
      nginx.ingress.kubernetes.io/server-snippets: |
       location / {
        proxy_set_header Upgrade $http_upgrade;
        proxy_set_header Connection $connection_upgrade;
        proxy_cache off;
        proxy_buffering off;
        proxy_http_version 1.1;
        proxy_set_header X-Forwarded-Host $http_host;
        proxy_set_header X-Forwarded-Proto $scheme;
        proxy_set_header X-Forwarded-For $remote_addr;
        proxy_set_header Host $host;
        proxy_set_header Connection "upgrade";
        proxy_cache_bypass $http_upgrade;
        }
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - cloud.invite-apollo.app
    secretName: invite-apolloc8780cfe-4493-4e9d-82cf-b18445277a3b
  rules:
    - host: cloud.invite-apollo.app
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: signalrchat-service
                port:
                  number: 8080
